[package]
name = "riker-testkit"
version = "0.1.0"
edition = "2018"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "Tools to make testing Riker applications easier"
homepage = "http://riker.rs/logging"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4"
tokio = { version = "^0.2", features = ["rt-threaded", "macros", "sync"], optional = true }
async-trait = { version="0.1.42", optional = true }

[features]
tokio_executor = ["tokio", "async-trait"]
